--- a/css/theme-color/defult-color.css
+++ b/css/theme-color/defult-color.css
@@ -9,17 +9,21 @@ aside .logo a::after {
 }
 
 aside .nav li a:hover,
-aside .nav li a.active {
+aside .nav li a.active,
+aside .copyright-text a,
+.about-content .about-text h3 span {
     color: #ec1839;
-}
-
-aside .copyright-text a {
-    color:  #ec1839;
 }
 
 aside .nav-toggler span,
 aside .nav-toggler span::before,
 aside .nav-toggler span::after,
-.home .intro .social-link a {
+.home .intro .social-link a,
+.section-title h2::before,
+.section-title h2::after,
+.btn,
+.about .about-content .skills .skill-item .progress .progress-in,
+.about .about-content .timeline-box .timeline .timeline-item::before,
+.about .about-content .timeline-box .timeline .timeline-item .circle-dot {
     background-color: #ec1839;
 }
