--- a/css/style.css
+++ b/css/style.css
@@ -29,15 +29,15 @@ section {
     padding: 0 30px;
 }
 
-
 .container {
     max-width: 1100px;
     width: 100%;
     margin: auto;
 }
-/* change korbo */
+
 section .container {
-    padding: 60px 0 70px;
+    padding-top: 60px;
+    padding-bottom: 70px;
 }
 
 .row {
@@ -57,7 +57,7 @@ section .container {
 }
 
 .section-title h2 {
-    font-size: 40px;
+    font-size: 2.5rem;
     color: #302e4d;
     font-family: 'Rubik', sans-serif;
     font-weight: 700;
@@ -512,4 +512,322 @@ aside .copyright-text {
     line-height: 1.6;
     color: #504e70;
     margin: 0;
+}
+
+/* Service Section
+================== */
+.service .container {
+    padding-bottom: 40px;
+}
+
+.service .service-item {
+    -ms-flex: 0 0 33.33%;
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+    margin-bottom: 30px;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.service .service-item .service-item-inner {
+    background-color: #fdf9ff;
+    border: 1px solid #d4d4e3;
+    border-radius: 10px;
+    padding: 30px 15px;
+    text-align: center;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.service .service-item .service-item-inner:hover {
+    -webkit-box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+}
+
+.service .service-item .service-item-inner .icon {
+    height: 60px;
+    width: 60px;
+    /* display: block; */
+    margin: 0 auto 30px;
+    text-align: center;
+    border-radius: 50%;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.service .service-item .service-item-inner .icon i {
+    font-size: 40px;
+    line-height: 60px;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.service .service-item .service-item-inner:hover .icon i {
+    font-size: 25px;
+    color: #fff;
+}
+
+.service .service-item .service-item-inner h4 {
+    font-size: 1.125rem;
+    margin-bottom: 15px;
+    color: #302e4d;
+    font-weight: 700;
+}
+
+.service .service-item .service-item-inner p {
+    /* font-size: 1rem; */
+    color: #504e70;
+    /* line-height: 1.5; */
+    /* margin: 0; */
+}
+
+/* Portfolio Section
+================== */
+.portfolio .container {
+    padding-bottom: 40px;
+}
+
+.portfolio .portfolio-filter {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.portfolio .portfolio-filter button {
+    border: none;
+    background-color: transparent;
+    font-size: 1.125rem;
+    font-weight: 700;
+    text-transform: capitalize;
+    margin: 0 10px;
+    color: #302e4d;
+    cursor: pointer;
+    border-bottom: 2px solid transparent;
+    white-space: nowrap;
+    padding-bottom: 2px;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.portfolio .portfolio-item {
+    -ms-flex: 0 0 33.33%;
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+    margin-bottom: 30px;
+}
+
+.portfolio .portfolio-item .portfolio-item-inner {
+    border: 6px solid #fdf9ff;
+    border-radius: 10px;
+    /* overflow: hidden; */
+    cursor: pointer;
+    position: relative;
+}
+
+.portfolio .portfolio-item .portfolio-item-inner .portfolio-img img {
+    width: 100%;
+    display: block;
+}
+
+.portfolio .portfolio-item .portfolio-item-inner .portfolio-info {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 100%;
+    width: 100%;
+    /* z-index: 1; */
+    padding: 30px;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.portfolio .portfolio-item .portfolio-item-inner:hover .portfolio-info {
+    opacity: 1;
+}
+
+.portfolio .portfolio-item .portfolio-item-inner .portfolio-info h4 {
+    font-size: 1.125rem;
+    font-weight: 700;
+    color: #fff;
+    opacity: 0;
+    -webkit-transform: translateX(-20px);
+    transform: translateX(-20px);
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.portfolio .portfolio-item .portfolio-item-inner:hover .portfolio-info h4 {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+    transform: translateX(0px);
+}
+
+.portfolio .portfolio-item .portfolio-info .icon {
+    height: 40px;
+    width: 40px;
+    background-color: #fff;
+    text-align: center;
+    border-radius: 50%;
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+    line-height: 40px;
+    opacity: 0;
+    -webkit-transform: translateX(20px);
+    transform: translateX(20px);
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.portfolio .portfolio-item .portfolio-item-inner:hover .portfolio-info .icon {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+    transform: translateX(0px);
+}
+
+/* Lightbox 
+===================*/
+.lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 999;
+    display: none;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    cursor: zoom-out;
+    padding: 30px;
+}
+
+.lightbox.open {
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.lightbox .lightbox-content img {
+    height: auto;
+    width: auto;
+    max-height: 430px;
+    max-width: 100%;
+}
+
+.lightbox .lightbox-content {
+    position: relative;
+    cursor: pointer;
+}
+
+.lightbox .lightbox-content {
+    animation: lightboxImage 1.2s ease;
+}
+
+@-webkit-keyframes lightboxImage {
+    0% {
+        -webkit-transform: scale(0.8);
+        transform: scale(0.8);
+    }
+    30% {
+        -webkit-transform: scale(0.6);
+        transform: scale(0.6);
+    }
+    70% {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+@keyframes lightboxImage {
+    0% {
+        -webkit-transform: scale(0.8);
+        transform: scale(0.8);
+    }
+    30% {
+        -webkit-transform: scale(0.6);
+        transform: scale(0.6);
+    }
+    70% {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+.lightbox .lightbox-content .lightbox-close {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    top: -40px;
+    right: 0;
+    font-size: 32px;
+    text-align: right;
+    color: #fff;
+}
+
+.lightbox .lightbox-content .lightbox-caption {
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+    width: 100%;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: space-between;
+    justify-content: space-between;
+    font-size: 1rem;
+    color: #fff;
+    font-weight: 400;
+}
+
+.lightbox .lightbox-controls .prev-item,
+.lightbox .lightbox-controls .next-item {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    background-color: #fff;
+    text-align: center;
+    border-radius: 50%;
+    cursor: pointer;
+    top: 50%;
+    margin-top: -20px;
+    z-index: 101;
+    -webkit-box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+}
+
+.lightbox .lightbox-controls .prev-item {
+    left: 30px;
+}
+
+.lightbox .lightbox-controls .next-item {
+    right: 30px;
+}
+
+.lightbox .lightbox-controls .prev-item:hover,
+.lightbox .lightbox-controls .next-item:hover {
+    transform: scale(1.1);
+    -webkit-box-shadow: 0 0 20px rgba(48, 46, 77, 1);
+    box-shadow: 0 0 20px rgba(48, 46, 77, 1);
+}
+
+.lightbox .lightbox-controls .prev-item i,
+.lightbox .lightbox-controls .next-item i {
+    font-size: 32px;
+    line-height: 40px;
 }
