--- a/css/theme-color/defult-color.css
+++ b/css/theme-color/defult-color.css
@@ -11,7 +11,12 @@ aside .logo a::after {
 aside .nav li a:hover,
 aside .nav li a.active,
 aside .copyright-text a,
-.about-content .about-text h3 span {
+.about-content .about-text h3 span,
+.service .service-item .service-item-inner .icon i,
+.portfolio .portfolio-filter button.active,
+.portfolio .portfolio-item .portfolio-info .icon i,
+.lightbox .lightbox-controls .prev-item i,
+.lightbox .lightbox-controls .next-item i {
     color: #ec1839;
 }
 
@@ -24,6 +29,11 @@ aside .nav-toggler span::after,
 .btn,
 .about .about-content .skills .skill-item .progress .progress-in,
 .about .about-content .timeline-box .timeline .timeline-item::before,
-.about .about-content .timeline-box .timeline .timeline-item .circle-dot {
+.about .about-content .timeline-box .timeline .timeline-item .circle-dot,
+.service .service-item .service-item-inner:hover .icon {
     background-color: #ec1839;
+}
+
+.portfolio .portfolio-filter button.active {
+    border-color: #ec1839;
 }
