Portfolio filter and lightbox dynamic

--- a/css/theme-color/defult-color.css
+++ b/css/theme-color/defult-color.css
@@ -13,6 +13,7 @@ aside .nav li a.active,
 aside .copyright-text a,
 .about-content .about-text h3 span,
 .service .service-item .service-item-inner .icon i,
+.portfolio .portfolio-filter button:hover,
 .portfolio .portfolio-filter button.active,
 .portfolio .portfolio-item .portfolio-info .icon i,
 .lightbox .lightbox-controls .prev-item i,
