--- a/css/style.css
+++ b/css/style.css
@@ -618,6 +618,41 @@ aside .copyright-text {
     margin-bottom: 30px;
 }
 
+.portfolio .portfolio-item.hide {
+    display: none;
+}
+
+.portfolio .portfolio-item.show {
+    display: block;
+    animation: showItem 0.5s ease;
+}
+
+@-webkit-keyframes showItem {
+    0% {
+        -webkit-transform: scale(0.8);
+        transform: scale(0.8);
+        opacity: 0;
+    }
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@keyframes showItem {
+    0% {
+        -webkit-transform: scale(0.8);
+        transform: scale(0.8);
+        opacity: 0;
+    }
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
 .portfolio .portfolio-item .portfolio-item-inner {
     border: 6px solid #fdf9ff;
     border-radius: 10px;
@@ -658,6 +693,22 @@ aside .copyright-text {
     transform: translateX(-20px);
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
+}
+
+.portfolio .portfolio-item .portfolio-item-inner .portfolio-info p {
+    font-size: 1rem;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+    -webkit-transform: translateY(40px);
+    transform: translateY(40px);
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.portfolio .portfolio-item .portfolio-item-inner:hover .portfolio-info p {
+    -webkit-transform: translateY(55px);
+    transform: translateY(55px);
 }
 
 .portfolio .portfolio-item .portfolio-item-inner:hover .portfolio-info h4 {
@@ -726,7 +777,7 @@ aside .copyright-text {
 }
 
 .lightbox .lightbox-content {
-    animation: lightboxImage 1.2s ease;
+    animation: lightboxImage 0.8s ease;
 }
 
 @-webkit-keyframes lightboxImage {
@@ -821,10 +872,20 @@ aside .copyright-text {
 
 .lightbox .lightbox-controls .prev-item:hover,
 .lightbox .lightbox-controls .next-item:hover {
+    -webkit-transform: scale(1.1);
     transform: scale(1.1);
     -webkit-box-shadow: 0 0 20px rgba(48, 46, 77, 1);
     box-shadow: 0 0 20px rgba(48, 46, 77, 1);
 }
+
+.lightbox .lightbox-controls .prev-item:active,
+.lightbox .lightbox-controls .next-item:active {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-box-shadow: 0 0 20px rgba(48, 46, 77, 1);
+    box-shadow: 0 0 20px rgba(48, 46, 77, 1);
+}
+
 
 .lightbox .lightbox-controls .prev-item i,
 .lightbox .lightbox-controls .next-item i {
