--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body {
     line-height: 1.5;
 }
 
+input, textarea, select {
+    font-family: 'Montserrat', sans-serif;
+}
+
 .main-content {
     padding-left: 270px;
 }
@@ -98,11 +102,13 @@ section .container {
     font-weight: 500;
     padding: 12px 35px;
     color: #fff;
+    border: none;
     border-radius: 40px;
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
     display: inline-block;
-    /* white-space: nowrap; */
+    white-space: nowrap;
+    cursor: pointer;
 }
 
 .btn:hover {
@@ -891,4 +897,85 @@ aside .copyright-text {
 .lightbox .lightbox-controls .next-item i {
     font-size: 32px;
     line-height: 40px;
+}
+
+/* Contact Section
+================== */
+.contact .contact-info-item {
+    -ms-flex: 0 0 33.33%;
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.contact .contact-info-item .icon {
+    display: inline-block;
+}
+
+.contact .contact-info-item .icon i {
+    font-size: 2.5rem;
+}
+
+.contact .contact-info-item h4 {
+    font-size: 1.125rem;
+    font-weight: 700;
+    color: #302e4d;
+    margin: 15px 0 5px;
+}
+
+.contact .contact-info-item p {
+    font-weight: 500;
+}
+
+.contact .contact-form {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.contact .contact-form .col-6 {
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+}
+
+.contact .contact-form .col-12 {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.contact .contact-form .form-item {
+    margin-bottom: 25px;
+}
+
+.contact .contact-form .form-item .form-control {
+    width: 100%;
+    height: 50px;
+    border-radius: 25px;
+    border: 1px solid #d4d4e3;
+    padding: 10px 25px;
+    font-size: 1rem;
+    color: #504e70;
+    /* If I use transition, it will show 'Black' border color what is so annoying.*/
+    /* -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease; */
+}
+
+.contact .contact-form .form-item .form-control:focus {
+    -webkit-box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+    border: none;
+}
+
+.contact .contact-form .form-item textarea.form-control {
+    height: 140px;
+}
+
+.contact .contact-form .btn {
+    height: 50px;
+    padding: 0 50px;
+    display: block;
+    margin: 0 auto;
 }
