--- a/css/theme-color/defult-color.css
+++ b/css/theme-color/defult-color.css
@@ -17,7 +17,10 @@ aside .copyright-text a,
 .portfolio .portfolio-filter button.active,
 .portfolio .portfolio-item .portfolio-info .icon i,
 .lightbox .lightbox-controls .prev-item i,
-.lightbox .lightbox-controls .next-item i {
+.lightbox .lightbox-controls .next-item i,
+.contact .contact-info-item .icon i,
+.contact .contact-info-item p,
+.contact .contact-info-item p a {
     color: #ec1839;
 }
 
