--- a/css/style.css
+++ b/css/style.css
@@ -1039,4 +1039,8 @@ aside .copyright-text {
     .contact .contact-info-item p {
         font-size: 1rem;
     }
+
+    .email {
+        font-size: 0.825rem;
+    }
 }
